# pricetracker

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
fixtures/: a8a.html  skalnik.html
src/: config.rs  dbsetup.rs  displayserver.rs  extractors.rs  http_clients.rs  main.rs  pricetracker.rs  storage.rs
