[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pricetracker"
path = "src/main.rs"

[[bin]]
name = "displayserver"
path = "src/displayserver.rs"

[[bin]]
name="dbsetup"
path="src/dbsetup.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.16"
select = "0.6.0"
tokio = { version = "1", features = ["full"] }
rusqlite = "0.29.0"
rouille = "3.6.2"
